# CTF-Solver

./: .dockerignore  CLAUDE.md  CTF_ENHANCEMENT.md  DREAMHACK_ENHANCEMENT.md  Dockerfile  KALI_TOOLS_INSTALLATION.md  LICENSE  PROBLEM_SOLVING_PROMPTS.md  Procfile  README.md  README_ko.md  docker-compose.yml  kali_server.py  pyproject.toml  smiithery.yaml  smithery.yaml
src/my_server/: mcp_server.py
